objects/JunoDoc__Junodoc_Batch__c/JunoDoc__Junodoc_Batch__c.object-meta.xml
<CustomObject>
    <label>Junodoc Batch</label>
    <nameField>
        <label>Junodoc Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junodoc Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>