objects/JunoDoc__Junodoc_Batch__c/fields/JunoDoc__Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Filter_Conditions__c</fullName>
    <label>Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>