objects/JunoDoc__Junodoc_Batch__c/fields/JunoDoc__Object__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Object__c</fullName>
    <label>Object</label>
    <length>225</length>
    <type>Text</type>
</CustomField>