objects/JunoDoc__Junodoc_Batch__c/fields/JunoDoc__Query__c.field-meta.xml
<CustomField>
    <fullName>JunoDoc__Query__c</fullName>
    <label>Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>